# rich-cli

./: pyproject.toml
